# memtrace-lib

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
common/: Cargo.toml
common/src/: executor.rs  interpret.rs  lib.rs  parser.rs  pipe_io.rs
examples/simple/: Cargo.toml
interpret/: Cargo.toml
interpret/examples/: exec.rs
interpret/src/: executor.rs  interpret.rs  lib.rs  output.rs  resolver.rs
libmemtrack/: Cargo.toml  build.sh  run.sh
libmemtrack/examples/simple/: Cargo.toml
libmemtrack/examples/simple/src/: main.rs
libmemtrack/src/: dylib.rs  lib.rs  trace.rs  trace_tree.rs  tracer.rs  tracker.rs
memgraph/: Cargo.toml  build.rs
memgraph/src/: flamegraph.rs  main.rs
memtrack/: Cargo.toml
src/: lib.rs  trace.rs  tracker.rs
src/arch/: darwin.rs  linux.rs  mod.rs
utils/: Cargo.toml
utils/examples/: exec.rs
utils/src/: accum.rs  executor.rs  ledger.rs  lib.rs  parser.rs  pipe_io.rs  pipe_reader.rs  pipe_writer.rs  resolver.rs
