[package]
name = "memtrack-lib"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/blkmlk/memtrack-lib"
license = "MIT"
description = "A dynamic library for collecting heap consumption"
keywords = ["dylib", "heap", "memgraph", "memgraph"]
categories = ["os"]
repository = "https://github.com/blkmlk/memtrack-lib"

[dependencies]
libc = "0.2.164"
ctor = "0.4.2"
process_path = "0.1.4"
mach2 = "0.4.2"
fishhook = "0.1.1"
memtrack-utils = "0.1.0"

[lib]
path = "src/lib.rs"
crate-type = ["dylib"]