[package]
name = "memtrace-lib"
version = "0.5.0"
edition = "2021"
homepage = "https://github.com/blkmlk/memtrace-lib"
license = "MIT"
description = "A dynamic library for collecting heap consumption"
keywords = ["dylib", "heap", "memory", "profile"]
categories = ["os"]
repository = "https://github.com/blkmlk/memtrace-lib"

[dependencies]
libc = "0.2.164"
ctor = "0.4.2"
process_path = "0.1.4"
fishhook = "0.3"
memtrace-utils = "0.3.0"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4.2"

[lib]
path = "src/lib.rs"
crate-type = ["dylib"]
